--- a/Linear-Algebra-Done-Right/Exercises.tex
+++ b/Linear-Algebra-Done-Right/Exercises.tex
@@ -655,6 +655,60 @@ we can say $\mathbb{R}$ is not a vector space.
 \subsection{Question 1}
 % ******************************
 
+For each of the following subsets of $\mathbf{F}^3$, determine whether it is a
+subspace of $\mathbf{F}^3$:
+
+\begin{itemize}
+  \item (a) \{$(x_1, x_2, x_3) \in \mathbf{F}^3: x_1 + 2x_2 + 3x_3 = 0$\};
+  \item (b) \{$(x_1, x_2, x_3) \in \mathbf{F}^3: x_1 + 2x_2 + 3x_3 = 4$\};
+  \item (c) \{$(x_1, x_2, x_3) \in \mathbf{F}^3: x_1 x_2 x_3 = 0$\};
+  \item (d) \{$(x_1, x_2, x_3) \in \mathbf{F}^3: x_1 = 5x_3$\};
+\end{itemize}
+
+Solution:
+
+Let's examine them one by one using 1.34, the conditions for a subspace.
+
+% ------------------------------
+\subsubsection*{(a)}
+% ------------------------------
+
+Let's examine \{$(x_1, x_2, x_3) \in \mathbf{F}^3: x_1 + 2x_2 + 3x_3 = 0$\}.
+Let's call this subset $A$.
+
+\begin{itemize}
+  \item The additive identity $(0, 0, 0)$ is in $A$ because $0 + 2 \cdot 0 + 3
+    \cdot 0 = 0$.
+  \item $A$ is closed under addition because: For $u, w \in A$, according to
+    the addition on $\mathbf{F}^3$, we have $u + w = (u_1, u_2, u_3) + (w_1,
+    w_2, w_3) = (u_1 + w_1, u_2 + w_2, u_3 + w_3)$. We can also see that
+    $(u_1 + w_1) + 2(u_2 + w_2) + 3(u_3 + w_3) = (u_1 + 2u_2 + 3u_3) + (w_1 +
+    2w_2 + 3w_3) = 0 + 0 = 0$. Therefore, we know $u + w \in A$.
+  \item $A$ is closed under scalar multiplication because: For $u \in A$ and
+  $a \in \mathbf{F}$, according to the scalar multiplication on $\mathbf{F}^3$,
+  $au = a(u_1, u_2, u_3) = (a u_1, a u_2, a u_3)$. We can also see that
+  $(a u_1) + 2(a u_2) + 3(a u_3) = a(u_1 + 2u_2 + 3u_3) = a \cdot 0 = 0$.
+  Therefore, we know that $au \in A$.
+\end{itemize}
+
+Therefore, the subset $A$ is a subspace of $\mathbf{F}^3$.
+
+% ------------------------------
+\subsubsection*{(b)}
+% ------------------------------
+
+TODO
+
+% ------------------------------
+\subsubsection*{(c)}
+% ------------------------------
+
+TODO
+
+% ------------------------------
+\subsubsection*{(d)}
+% ------------------------------
+
 TODO
 
 % ******************************
