Work on EXERCISES 1.C

--- a/Linear-Algebra-Done-Right/Exercises.tex
+++ b/Linear-Algebra-Done-Right/Exercises.tex
@@ -790,7 +790,92 @@ Therefore, the subset $D$ is a subspace of $\mathbf{F}^3$.
 \subsection{Question 2}
 % ******************************
 
-TODO
+Verify all the assertions in Example 1.35:
+
+\begin{itemize}
+  \item (a) If $b \in \mathbf{F}$, then \{ $(x_1, x_2, x_3, x_4) \in
+    \mathbf{F}^4: x_3 = 5x_4 + b$ \} is a subspace of $\mathbf{F}^4$ if and
+    only if $b=0$.
+  \item (b) The set of continuous real-valued functions on the interval [0, 1]
+    is a subspace of $\mathbf{R}^{[0,1]}$.
+  \item (c) The set of differentiable real-valued functions on $\mathbf{R}$ is
+    a subspace of $\mathbf{R}^{\mathbf{R}}$.
+  \item (d) The set of differentiable real-valued functions $f$ on the interval
+    $(0, 3)$ such that $f'(2) = b$ is a subspace of $\mathbf{R}^{(0,3)}$ if and
+    only if $b = 0$.
+  \item (e) The set of all sequences of complex numbers with limit 0 is a
+    subspace of $\mathbf{C}^{\infty}$.
+\end{itemize}
+
+Solution:
+
+% ------------------------------
+\subsubsection*{(a)}
+% ------------------------------
+
+Let's call this set $A$ and examine the three conditions that make a set a
+subspace.
+
+Let's examine the direction of sufficiency : if $b = 0$, then $A$ is a subspace
+of $\mathbf{F}^4$. When $b = 0$, set $A$ is \{ $(x_1, x_2, x_3, x_4) \in
+\mathbf{F}^4: x_3 = 5x_4 + 0 = 5x_4$ \}. Therefore:
+
+\begin{itemize}
+  \item The additive identity $(0, 0, 0, 0)$ is in $A$ because $0 = 5 \cdot 0$.
+  \item $A$ is closed under addition because: For $u, w \in A$, according to
+    the addition on $\mathbf{F}^4$, we have $u + w = (u_1, u_2, u_3, u_4) +
+    (w_1, w_2, w_3, w_4) = (u_1 + w_1, u_2 + w_2, u_3 + w_3, u_4 + w_4)$. We
+    can also see that $(u_3 + w_3) = (5u_4 + 5w_4) = 5(u_4 + w_4)$. Therefore,
+    we know $u + w \in A$.
+  \item $A$ is closed under scalar multiplication because: For $u \in A$ and $a
+    \in \mathbf{F}$, according to the scalar multiplication on $\mathbf{F}^4$,
+    $au = a(u_1, u_2, u_3, u_4) = (a u_1, a u_2, a u_3, a u_4)$. We can also
+    see that $a u_3 = a (5u_4) = 5(a u_4)$. Therefore, we know that $au \in A$.
+\end{itemize}
+
+Therefore, we know that when $b = 0$, $A$ is a subspace of $\mathbf{F}^4$.
+
+Now let's examine the direction of necessity: if $A$ is a subspace of
+$\mathbf{F}^4$, then $b = 0$. Because now we know $A$ is a subspace, the
+additive identity $(0, 0, 0, 0)$ must be in $A$. Therefore, the third element
+$0$ must be equal to $5 \cdot 0 + b$ where ``$0$'' is the fourth element. So
+$b = 0$.
+
+% ------------------------------
+\subsubsection*{(b)}
+% ------------------------------
+
+Let's call this set $B$. To solve this question, we need to review the
+definition of the notation $\mathbf{F}^S$. See section 1.23 and section 1.24 in
+the textbook. In this question, $\mathbf{R}^{[0,1]}$ refers to the set of
+functions from $[0,1]$ to $\mathbf{R}$. Note the functions in
+$\mathbf{R}^{[0,1]}$ don't have to be continuous.
+
+For two functions $f, g \in \mathbf{R}^{[0,1]}$, the sum $f + g$ is defined by
+$(f + g)(x) = f(x) + g(x)$ for all $x \in [0,1]$. (Because $f(x) \in
+\mathbf{R}$ and $g(x) \in \mathbf{R}$, $f(x) + g(x) \in \mathbf{R}$, we know
+$(f + g)(x)$ is also a function from $[0,1]$ to $\mathbf{R}$, so $(f + g)(x)
+\in \mathbf{R}^{[0,1]}$.)
+
+For $\lambda \in \mathbf{R}$ and $f \in \mathbf{R}^{[0,1]}$, the product
+$\lambda f$ is defined by $(\lambda f)(x) = \lambda f(x)$ for all $x \in [0,1]$.
+(Similarly, we can verify that $(\lambda f)(x) \in \mathbf{R}^{[0,1]}$.)
+
+The additive identity of $\mathbf{R}^{[0,1]}$ is the function $0(x) = 0$ for
+all $x \in [0,1]$.
+
+Using the knowledge of real analysis, we can tell that:
+\begin{itemize}
+  \item $0(x) = 0$ is a continuous real-valued function so it belongs to $B$.
+  \item Adding two continuous real-valued functions $f + g$ produces another
+    continuous real-valued functions, so $f + g \in B$, so $B$ is closed under
+    addition.
+  \item Multiplying a continuous real-valued function with a real number also
+    produces a continuous real-valued function, therefore, $\lambda f \in B$,
+    so $B$ is closed under scalar multiplication.
+\end{itemize}
+
+Therefore, $B$ is a subspace of $\mathbf{R}^{[0,1]}$.
 
 % ******************************
 \subsection{Question 3}
