Linear Algebra: Work on EXERCISES 1.C

--- a/Linear-Algebra-Done-Right/Exercises.tex
+++ b/Linear-Algebra-Done-Right/Exercises.tex
@@ -877,23 +877,82 @@ Using the knowledge of real analysis, we can tell that:
 
 Therefore, $B$ is a subspace of $\mathbf{R}^{[0,1]}$.
 
+% ------------------------------
+\subsubsection*{(c)}
+% ------------------------------
+
+TODO: I need to come back after learning mathematical analysis.
+
+% ------------------------------
+\subsubsection*{(d)}
+% ------------------------------
+
+TODO: I need to come back after learning mathematical analysis.
+
+% ------------------------------
+\subsubsection*{(e)}
+% ------------------------------
+
+TODO: I need to come back after learning mathematical analysis.
+
 % ******************************
 \subsection{Question 3}
 % ******************************
 
-TODO
+TODO: I need to come back after learning mathematical analysis.
 
 % ******************************
 \subsection{Question 4}
 % ******************************
 
-TODO
+TODO: I need to come back after learning mathematical analysis.
 
 % ******************************
 \subsection{Question 5}
 % ******************************
 
-TODO
+Is $\mathbf{R}^2$ a subspace of the complex vector space $\mathbf{C}^2$?
+
+Solution:
+
+First of all, we need to figure out what $\mathbf{R}^2$ and $\mathbf{C}^2$
+refer to exactly. Based on the definition 1.10 for $\mathbf{F}^n$, we can see
+that
+
+\[
+  \mathbf{R}^2 = \{(x_1, x_2): x_1, x_2 \in \mathbf{R} \}
+\]
+
+and
+
+\[
+  \mathbf{C}^2 = \{(x_1, x_2): x_1, x_2 \in \mathbf{C} \}
+\]
+
+We also need to understand how addition and scalar multiplication are defined
+on them. This can be found in definition 1.13 and definition 1.14.
+
+Now let's examine if $\mathbf{R}^2$ meets the three conditions that make it a
+subspace.
+
+\begin{enumerate}
+  \item The additive identity on $\mathbf{C}^2$ is $(0 + 0i, 0 + 0i) = (0, 0)$.
+    For $\forall (x_1, x_2) \in \mathbf{R}^2$, $(0, 0) + (x_1, x_2) = (0 + x_1,
+    0 + x_2) = (x_1, x_2)$. So the additive identity is in $\mathbf{R}^2$.
+  \item $\mathbf{R}^2$ is closed under addition because: For $u, w \in
+    \mathbf{R}^2$, we have $u + w = (u_1, u_2) + (w_1, w_2) = (u_1 + w_1, u_2 +
+    w_2).$ Because $u_1, u_2, w_1, w_2 \in \mathbf{R}$, $u_1 + w_1 \in
+    \mathbf{R}$ and $u_2 + w_2 \in \mathbf{R}$, so $(u_1 + w_1, u_2 + w_2) \in
+    \mathbf{R}^2$, so $u + w \in \mathbf{R}^2$, so $\mathbf{R}^2$ is closed
+    under addition.
+  \item $\mathbf{R}^2$ is closed under scalar multiplication because: For $u
+    \in \mathbf{R}^2$ and $a \in \mathbf{R}$, $au = a(u_1, u_2) = (a u_1,
+    a u_2)$. Because $u_1, u_2, a \in \mathbf{R}$, $a u_1 \in \mathbf{R}$ and
+    $a u_2 \in \mathbf{R}$, so $(a u_1, a u_2) \in \mathbf{R}^2$, so
+    $\mathbf{R}^2$ is closed under scalar multiplication.
+\end{enumerate}
+
+Therefore, $\mathbf{R}^2$ is a subspace of $\mathbf{C}^2$.
 
 % ******************************
 \subsection{Question 6}
